--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/TheBrunno/ecommerce-app#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
