--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-stripe-checkout": "^2.6.3",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
