--- a/api/package.json
+++ b/api/package.json
@@ -23,7 +23,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.9.1"
+    "mongoose": "^6.9.1",
+    "stripe": "^11.11.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
